<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Jason Jamieson as part of the Android Kotlin Developer Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be of your own work.
  ~ Submission of this project will cause you to break the Udacity Honor Code
  ~ and possible suspension of your account.
  ~
  ~ I, Jason Jamieson, the author of the project, allow you to check this code as reference, but if
  ~ used as submission, it's your responsibility if you are expelled.
  ~
  ~ Copyright (c) 2021 Jason Jamieson
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/voterInfoFragmentElectionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{voterInfoViewModel.election.name}"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/voterInfoFragmentElectionDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@{voterInfoViewModel.election.electionDay.toString()}"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toBottomOf="@id/voterInfoFragmentElectionName"
            tools:text="20 January 2020" />

        <ProgressBar
            android:id="@+id/voterInfoFragmentProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/voterInfoFragmentElectionName" />

        <TextView
            android:id="@+id/voterInfoFragmentElectionStateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="@id/voterInfoFragmentElectionDate"
            app:layout_constraintTop_toBottomOf="@id/voterInfoFragmentElectionDate"
            style="@style/HeaderStyle" />

        <TextView
            android:id="@+id/voterInfoFragmentStateLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> voterInfoViewModel.navigateToUrl(voterInfoViewModel.electionAdministrationBody.votingLocationFinderUrl)}"
            android:text="@string/voting_locations"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="@id/voterInfoFragmentElectionDate"
            app:layout_constraintTop_toBottomOf="@id/voterInfoFragmentElectionStateHeader" />

        <TextView
            android:id="@+id/voterInfoFragmentStateBallot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> voterInfoViewModel.navigateToUrl(voterInfoViewModel.electionAdministrationBody.ballotInfoUrl)}"
            android:text="@string/ballot_information"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="@id/voterInfoFragmentElectionDate"
            app:layout_constraintTop_toBottomOf="@id/voterInfoFragmentStateLocations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/voterInfoFragmentAddressGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="voterInfoFragmentStateCorrespondenceHeader,voterInfoFragmentAddress" />

        <TextView
            android:id="@+id/voterInfoFragmentStateCorrespondenceHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/correspondence_address"
            style="@style/HeaderStyle"
            app:layout_constraintStart_toStartOf="@id/voterInfoFragmentElectionDate"
            app:layout_constraintTop_toBottomOf="@id/voterInfoFragmentStateBallot" />

        <TextView
            android:id="@+id/voterInfoFragmentAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{voterInfoViewModel.address}"
            app:layout_constraintStart_toStartOf="@id/voterInfoFragmentElectionDate"
            app:layout_constraintTop_toBottomOf="@id/voterInfoFragmentStateCorrespondenceHeader"
            tools:text="@string/correspondence_address" />

        <Button
            android:id="@+id/voterInfoFragmentFollowUnfollowButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:enabled="@{voterInfoViewModel.election != null}"
            android:onClick="@{() -> voterInfoViewModel.toggleElectionFollow()}"
            app:followUnfollowToggle="@{voterInfoViewModel.isFollowed}"
            style="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_election" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>